Adding warning message for unsupported JREs